k8s-configuration/adserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adserver-deployment
  labels:
    app: adserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adserver
  template:
    metadata:
      labels:
        app: adserver
    spec:
      containers:
        - name: adserver
          image:
          ports:
            - containerPorts: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adserver-service
spec:
  selector:
    app: adserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
