k8s-configuration/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: awesome-calculator.com
      http:
        paths:
          - backend:
            serviceName: frontend-service
            servicePort: 80
